fix: load js script

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -14,6 +14,6 @@
         <button type="submit">Shorten</button>
     </form>
 </div>
-<script src="../script/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
