up: new style for output

--- a/website/static/output.html
+++ b/website/static/output.html
@@ -9,8 +9,10 @@
 <body>
 <div class="container">
     <h1>Your Shortened URL</h1>
-    <input type="text" id="shortUrl" readonly placeholder="Your short URL">
-    <h1></h1>
+    <form id="urlForm">
+        <input type="text" id="shortUrl" readonly>
+    </form>
+    <h3></h3>
     <button id="copyButton">Copy URL</button>
     <br><br>
     <a href="index.html">Shorten another URL</a>
