--- a/website/static/index.html
+++ b/website/static/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container">
+    <button class="auth-button" onclick="window.location.href='auth.html'">Login</button>
     <h1>URL Shortener</h1>
     <form id="urlForm">
         <input type="text" id="urlInput" placeholder="Enter URL here">
