add: registration window

--- a/website/static/regist.html
+++ b/website/static/regist.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Authorization</title>
+    <title>User Registration</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
-    <h1>Login</h1>
-    <form id="authForm">
-        <br>
+    <h1>Register</h1>
+    <form id="registrForm">
         <input type="text" id="login" name="login" required placeholder="login">
         <br>
         <br>
         <input type="password" id="password" name="password" required placeholder="password">
         <br>
         <br>
-        <button type="submit">Sign In</button>
+        <button type="submit">Register</button>
         <br>
         <br>
-        <a href="regist.html">Registration</a>
+        <a href="regist.html">Sing In</a>
     </form>
     <p id="message"></p>
 </div>
-<script src="auth.js"></script>
+<script src="regist.js"></script>
 </body>
 </html>
