up: new file system for front end

--- a/website/static/output/index.html
+++ b/website/static/output/index.html
@@ -15,7 +15,7 @@
     <h3></h3>
     <button id="copyButton">Copy URL</button>
     <br><br>
-    <a href="index.html">Shorten another URL</a>
+    <a href="http://localhost:8000/shorten">Shorten another URL</a>
 </div>
 <script src="output.js"></script>
 </body>
