--- a/website/static/regist/index.html
+++ b/website/static/regist/index.html
@@ -19,7 +19,7 @@
         <button type="submit">Register</button>
         <br>
         <br>
-        <a href="regist.html">Sing In</a>
+        <a href="http://localhost:8000/">Sing In</a>
     </form>
     <p id="message"></p>
 </div>
