--- a/website/static/auth/index.html
+++ b/website/static/auth/index.html
@@ -20,7 +20,7 @@
         <button type="submit">Sign In</button>
         <br>
         <br>
-        <a href="regist.html">Registration</a>
+        <a href="http://localhost:8000/registration">Registration</a>
     </form>
     <p id="message"></p>
 </div>
