--- a/website/static/main/index.html
+++ b/website/static/main/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <button class="auth-button" onclick="window.location.href='auth.html'">Login</button>
+    <button class="auth-button" onclick="window.location.href='http://localhost:8000/'">Login</button>
     <h1>URL Shortener</h1>
     <form id="urlForm">
         <input type="text" id="urlInput" placeholder="Enter URL here">
