add: new button for profile

--- a/website/static/main/index.html
+++ b/website/static/main/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="button-container">
+    <button class="profile-button">Profile</button>
+    <button class="auth-button">Login</button>
+</div>
 <div class="container">
-    <button class="auth-button" onclick="window.location.href='http://localhost:8000/'">Login</button>
     <h1>URL Shortener</h1>
     <form id="urlForm">
         <input type="text" id="urlInput" placeholder="Enter URL here">
