up: profile shortlink history

--- a/website/static/profile/index.html
+++ b/website/static/profile/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 <div class="container">
@@ -15,7 +14,17 @@
     <canvas id="domainChart" width="400" height="200"></canvas>
 
     <h2>History of Shortened URLs</h2>
-    <ul id="urlHistory"></ul>
+    <table id="urlHistoryTable">
+        <thead>
+        <tr>
+            <th>Short URL</th>
+            <th>Original URL</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
 </div>
 <script src="profile.js"></script>
 </body>
