add: buttons for logout and back to shorten page

--- a/website/static/profile/index.html
+++ b/website/static/profile/index.html
@@ -8,6 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+<div class="button-container">
+    <button class="profile-button">Back</button>
+    <button class="auth-button">Logout</button>
+</div>
 <div class="container">
     <h1 id="username">Username</h1>
 
