up: delete not using styles and check session_id for generation link

--- a/website/static/main/index.html
+++ b/website/static/main/index.html
@@ -15,7 +15,7 @@
     <h1>URL Shortener</h1>
     <form id="urlForm">
         <input type="text" id="urlInput" placeholder="Enter URL here">
-        <button type="submit">Shorten</button>
+        <button type="submit" class="submit-button">Shorten</button>
     </form>
 </div>
 <script src="script.js"></script>
