up: docker and nginx settings

--- a/website/static/output/index.html
+++ b/website/static/output/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shortened URL</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
 <div class="container">
@@ -17,6 +17,6 @@
     <br><br>
     <a href="http://localhost/shorten">Shorten another URL</a>
 </div>
-<script src="output.js"></script>
+<script src="/output/output.js"></script>
 </body>
 </html>
