--- a/website/static/registration/index.html
+++ b/website/static/registration/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
 <div class="container">
@@ -19,10 +19,10 @@
         <button type="submit">Register</button>
         <br>
         <br>
-        <a href="http://localhost/">Sing In</a>
+        <a href="/auth">Sing In</a>
     </form>
     <p id="message"></p>
 </div>
-<script src="regist.js"></script>
+<script src="/registration/regist.js"></script>
 </body>
 </html>
