--- a/website/static/auth/index.html
+++ b/website/static/auth/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Authorization</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
 <div class="container">
@@ -20,10 +20,10 @@
         <button type="submit">Sign In</button>
         <br>
         <br>
-        <a href="http://localhost/registration">Registration</a>
+        <a href="/registration/">Registration</a>
     </form>
     <p id="message"></p>
 </div>
-<script src="auth.js"></script>
+<script src="/auth/auth.js"></script>
 </body>
 </html>
