--- a/website/static/profile/index.html
+++ b/website/static/profile/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -31,6 +31,6 @@
         </tbody>
     </table>
 </div>
-<script src="profile.js"></script>
+<script src="/profile/profile.js"></script>
 </body>
 </html>
