--- a/website/static/shorten/index.html
+++ b/website/static/shorten/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URL Shortener</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
 <div class="button-container">
@@ -18,6 +18,6 @@
         <button type="submit" class="submit-button">Shorten</button>
     </form>
 </div>
-<script src="script.js"></script>
+<script src="/shorten/script.js"></script>
 </body>
 </html>
