up: new link for href

--- a/website/static/registration/index.html
+++ b/website/static/registration/index.html
@@ -19,7 +19,7 @@
         <button type="submit">Register</button>
         <br>
         <br>
-        <a href="/auth">Sing In</a>
+        <a href="/auth/">Sing In</a>
     </form>
     <p id="message"></p>
 </div>
