--- a/website/static/output/index.html
+++ b/website/static/output/index.html
@@ -15,7 +15,7 @@
     <h3></h3>
     <button id="copyButton">Copy URL</button>
     <br><br>
-    <a href="http://localhost/shorten">Shorten another URL</a>
+    <a href="http://localhost/shorten/">Shorten another URL</a>
 </div>
 <script src="/output/output.js"></script>
 </body>
