fix: set shortUrl in cookie

--- a/website/static/shorten/index.html
+++ b/website/static/shorten/index.html
@@ -18,6 +18,6 @@
         <button type="submit" class="submit-button">Shorten</button>
     </form>
 </div>
-<script src="/shorten/script.js"></script>
+<script src="/shorten/shorten.js"></script>
 </body>
 </html>
