--- a/website/static/auth/auth.html
+++ b/website/static/auth/auth.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Authorization</title>
-    <link rel="stylesheet" href="/auth/auth.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
 <div class="container">
